--- a/Reader25/pom.xml
+++ b/Reader25/pom.xml
@@ -241,6 +241,13 @@
 			<artifactId>scribejava-core</artifactId>
 			<version>2.8.1</version>
 		</dependency>
+		
+		<!-- JsonFormat -->
+		<dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-databind</artifactId>
+    		<version>2.11.1</version>
+		</dependency>
 		       
 	</dependencies>
     <build>
