--- a/Reader25/pom.xml
+++ b/Reader25/pom.xml
@@ -276,8 +276,22 @@
             <version>2.9.7</version>
         </dependency>
 		
-	
-		
+		<!-- google api -->
+		<dependency>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-analyticsreporting</artifactId>
+			<version>v4-rev153-1.25.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client-gson</artifactId>
+			<version>1.30.9</version>
+		</dependency>
+		<dependency>
+   			<groupId>com.google.apis</groupId>
+  			<artifactId>google-api-services-analytics</artifactId>
+  		 	<version>v3-rev20190807-1.30.10</version>
+		</dependency>
 		       
 	</dependencies>
     <build>
