--- a/Reader25/pom.xml
+++ b/Reader25/pom.xml
@@ -42,18 +42,10 @@
 		
 		
 		<!-- aop 처리를 위한 aspectjweaver 추가 -->
-		
 		<dependency>
-		
 			<groupId>org.aspectj</groupId>
-			
 			<artifactId>aspectjweaver</artifactId>
-			
 			<version>${org.aspectj-version}</version>
-			
-			
-		
-		
 		</dependency>
 		
 		<!-- Logging -->
@@ -276,7 +268,19 @@
             <version>2.9.7</version>
         </dependency>
 		
-	
+		<!-- 이메일 발송 -->
+		<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
 		
 		       
 	</dependencies>
